@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - fix construction of default values of some attributes e.g.
+            media_types, encodings
 
 0.572     2023-10-14 22:04:52Z
           - boost runtime performance by removing uses of MooX::HandlesVia
